--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.13.5",
+    "motion": "^11.15.0",
     "next": "^15.1.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
@@ -23,8 +24,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
@@ -32,6 +33,6 @@
     "sass": "^1.83.0",
     "sass-loader": "^13.3.3",
     "style-loader": "^4.0.0",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
